<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLoginFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btnLoginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginUsername"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook"
        app:layout_constraintVertical_bias="0.603"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btnLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username_password"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginPhone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle"
        app:layout_constraintVertical_bias="0.695"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btnLoginPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginUsername"
        app:layout_constraintVertical_bias="0.797"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorPrimaryLight"
        android:visibility="invisible"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>